src/search.css
@layer defaults {
  :root {
    --readthedocs-search-font-family: var(--readthedocs-font-family);
    --readthedocs-search-font-size: var(--readthedocs-font-size); /* 16px? */
    --readthedocs-search-code-font-family:
      SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
      monospace;
    --readthedocs-search-code-font-size: 0.9em;

    --readthedocs-search-backdrop-color: rgba(0, 0, 0, 0.3);
    --readthedocs-search-color: rgb(64, 64, 64);
    --readthedocs-search-link-color: rgb(64, 64, 64);

    --readthedocs-search-content-background-color: #fcfcfc;
    --readthedocs-search-content-border-color: #e0e0e0;
    --readthedocs-search-filters-border-color: #e0e0e0;
    --readthedocs-search-footer-background-color: rgb(234, 234, 234);
    --readthedocs-search-footer-color: #404040;
    --readthedocs-search-footer-code-background-color: #fff;
    --readthedocs-search-footer-code-border-color: #e1e4e5;
    --readthedocs-search-input-background-color: #eaeaea;

    /* `--readthedocs-search-result-section-highlight-color` is deprecated but
     * still support it for now. */
    --readthedocs-search-result-highlight-color: var(
      --readthedocs-search-result-section-highlight-color,
      #6ea0ec
    );
    --readthedocs-search-result-background-color: initial;
    /* `--readthedocs-search-result-section-color` is deprecated but
     * still support it for now. */
    --readthedocs-search-result-color: var(
      --readthedocs-search-result-section-color,
      rgba(0, 0, 0, 0.54)
    );
    --readthedocs-search-result-icon-color: rgba(0, 0, 0, 0.54);
    --readthedocs-search-result-heading-color: rbg(0, 0, 0);
    /* `--readthedocs-search-result-section-subheading-color` is deprecated but
     * still support it for now. */
    --readthedocs-search-result-subheading-color: var(
      --readthedocs-search-result-section-subheading-color,
      rgba(0, 0, 0, 0.64)
    );
    --readthedocs-search-result-active-background-color: rgb(245, 245, 245);
    --readthedocs-search-result-border-color: rgb(224, 224, 224);
  }
}

:host > div {
  font-family: var(--readthedocs-search-font-family);
  font-size: var(--readthedocs-search-font-size);

  /* TODO: make some of this variables */
  color: var(--readthedocs-search-color);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 3000;
  line-height: 1rem;
}

:host > div a {
  color: var(--readthedocs-search-link-color);
  text-decoration: none;
  cursor: pointer;
}

:host > div code {
  background: var(--readthedocs-search-footer-code-background-color);
  padding: 2px 5px;
  border: solid 1px var(--readthedocs-search-footer-code-border-color);
  color: var(--readthedocs-search-color);
  white-space: pre-wrap;
  word-wrap: break-word;
  font-family: var(--readthedocs-search-code-font-family);
  font-size: var(--readthedocs-search-code-font-size);
  border-radius: 0;
}

:host > div .background {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1250;
  width: 100%;
  height: 100%;
  background-color: var(--readthedocs-search-backdrop-color);
  backdrop-filter: blur(3px);
}

:host > div > div.content {
  margin: 5em auto auto auto;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100000;
  height: 80%;
  width: 60%;
  max-width: 43em;
  overflow-y: hidden;
  display: flex;
  flex-direction: column;
  border: 1px solid var(--readthedocs-search-content-border-color);
  border-radius: 0.7rem;
  line-height: 1.75rem;
  background-color: var(--readthedocs-search-content-background-color);
  box-shadow:
    rgba(0, 0, 0, 0.05) 5px 5px 5px 5px,
    rgba(0, 0, 0, 0.05) -5px -5px 5px 5px;
  text-align: left;
}

:host > div form {
  background-color: var(--readthedocs-search-input-background-color);
  margin: 0.5em;
  border-radius: 0.25em;
  font-size: 1.05em;
  padding: 5px;
  display: flex;
}

:host > div form.focus {
  outline: 2px solid #6ea0ec;
  border-shadow: inset 0 0 1px white transparent;
}

:host > div form > label {
  font-size: 1.15em;
  padding-left: 5px;
  color: var(--readthedocs-search-color);
}

:host > div form label svg {
  height: 1em;
  position: relative;
  top: 5px;
}

:host > div form > input {
  border: 0;
  outline: none;
  background: inherit;
  width: max-content;
  font-size: 1.15em;
  box-shadow: none;
  width: 100%;
  padding: 6px;
  line-height: 1;
  color: var(--readthedocs-search-color, rgb(64, 64, 64));
}

:host > div .results {
  margin-top: 10px;
  padding: 0.5em;
  overflow-y: scroll;
  height: 100%;
  hyphens: auto;
}

div.hit-block {
  padding-top: 3px;
  border-top: 1px solid var(--readthedocs-search-result-border-color);
  display: flex;
  flex-direction: column;
  margin-bottom: 10px;
  background-color: var(--readthedocs-search-result-background-color);
}

div.hit-block a.hit-block-heading {
  display: flex;
  align-items: center;
}

div.hit-block .hit-block-heading-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

div.hit-block a.hit-block-heading i,
div.hit-block .hit-block-heading-container .close-icon {
  font-size: 1.15em;
  width: 1em;
  padding-right: 10px;
  color: var(--readthedocs-search-result-icon-color);
  padding-top: 5px;
}

button.close-icon {
  border: none;
  margin: 0;
  padding: 0;
  padding-right: 10px;
  margin-bottom: 15px;
  overflow: visible;

  display: inline-block;
  width: 1em;
  height: 1em;
  vertical-align: middle;

  background: transparent;
  cursor: pointer;
}

button.close-icon svg {
  pointer-events: none;
}

div.hit-block a.hit-block-heading i svg,
div.hit-block .hit-block-heading-container svg {
  width: 1em;
}

:host > div .results a.hit {
  width: 100%;
  display: inline-block;
  padding: 0.15em calc(1.15em + 10px);
  box-sizing: border-box;
}

:host > div .results a.hit:hover,
:host > div .results .hit .active {
  background-color: var(--readthedocs-search-result-active-background-color);
}

:host > div .results h2 {
  display: inline-block;
  font-weight: 700;
  margin-top: 3px;
  margin-bottom: 5px;
  font-size: 1em;
  color: var(--readthedocs-search-result-heading-color);
  line-height: inherit;
}

:host > div .results a.hit > div {
  display: flex;
  flex-direction: column;
}

:host > div .results .hit .subheading {
  color: var(--readthedocs-search-result-subheading-color);
  font-weight: 700;
  font-size: 15px;
  margin-right: 10px;
  overflow-x: hidden;
  margin: inherit;
  line-height: inherit;
}

:host > div .results .hit .content {
  margin: 0;
  text-decoration: none;
  color: var(--readthedocs-search-result-color);
  font-size: 15px;
  display: block;
  margin-bottom: 5px;
  margin-bottom: 0;
  line-height: inherit;
  text-align: left;
}

:host > div .results span {
  font-style: normal;
}

:host > div .results .hit h2 span {
  background-color: #e5f6ff;
  padding-bottom: 3px;
  border-bottom-color: black;
}

:host > div .results .hit span {
  color: var(--readthedocs-search-result-highlight-color);
  font-style: italic;
  font-weight: bold;
}

:host div.content > div.footer {
  width: 100%;
  display: inline-block;
  height: 30px;
  background-color: var(--readthedocs-search-footer-background-color);
  color: var(--readthedocs-search-footer-color);
}

:host > div .credits {
  float: right;
  margin: 0 15px;
  font-size: small;
  padding-top: 3px;
}

:host > div .credits a img {
  display: inline-block;
  width: 100px;
  vertical-align: middle;
}

/* TODO: find an example for domain role and style it properly */
:host > div .readthedocs-search-result-hit--domain-role {
  font-size: 80%;
  letter-spacing: 1px;
}

:host > div .filters-title {
  display: block;
  font-size: 0.9rem;
  position: absolute;
  top: 0;
  left: 14px;
  background: rgb(252, 252, 252);
  margin: 0 5px;
  padding: 0 5px;
}

:host > div .filters {
  position: relative;
  padding-top: 0.9rem;
  margin: 0 0.5em;
}

:host > div .filters ul {
  display: block;
  margin: 0;
  padding: 5px 14px;
  border-radius: 0.3rem;
  border-style: solid;
  border-width: 1px;
  border-color: var(--readthedocs-search-filters-border-color);
  border-bottom: 1px solid #e0e0e0;
}

:host > div .filters li {
  display: inline-block;
  margin: 0 0 0 15px;
}

:host > div .filters li label {
  padding: 3px;
}

:host > div .filters label {
  font-size: 0.9rem;
}

:host > div .no-results {
  text-align: center;
  margin-top: 1.15em;
  padding: 15px;
  margin: 0 auto;
  width: 80%;
}

:host > div .no-results > p.title {
  margin-top: 0;
  margin-bottom: 0.5em;
}

:host > div .no-results > svg {
  height: 5.5rem;
  margin-bottom: 1.15em;
}

:host > div .no-results > div.footer p {
  font-size: small;
}

:host > div .no-results > .tips {
  padding: 0;
  text-align: left;
  font-size: 15px;
  margin-bottom: 1.15em;
}

:host > div .no-results > .tips ul {
  padding: 0 0 0 0.7em;
  margin: 0;
}
:host > div .no-results > .tips li {
  list-style-position: inside;
  list-style-type: "\BB  ";
  margin: 0;
  color: var(--readthedocs-search-color);
}

:host > div .help {
  display: inline-block;
  font-size: small;
  margin: 0 15px;
  padding: 0;
}

:host > div .help li {
  list-style: none;
  display: inline-block;
  margin: 0 0.4em;
}

